css/style.css
/* ... */
.collection header {
  min-height: 50vh;
  background-color: rgba(51, 26, 77, 0.75);
  background-image: -webkit-linear-gradient(rgba(64, 32, 96, 0.9), rgba(64, 32, 96, 0.9)), url(../images/bg-large.jpg);
  background-image: linear-gradient(rgba(64, 32, 96, 0.9), rgba(64, 32, 96, 0.9)), url(../images/bg-large.jpg);
  background-size: cover;
  background-position: 50% 50%;
  color: white;
  color: rgba(255, 255, 255, 0.9);
  padding: 4rem; }
  .collection header h1 {
    font-size: 3rem;
    letter-spacing: -1px;
    margin-top: 0;
    font-weight: 100; }
.collection .content {
  max-width: 900px;
  margin: 0 auto;
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -moz-box-pack: justify;
  box-pack: justify;
  -webkit-justify-content: space-between;
  -moz-justify-content: space-between;
  -ms-justify-content: space-between;
  -o-justify-content: space-between;
  justify-content: space-between;
  -ms-flex-pack: justify; }
  .collection .content .item {
    width: 48%;
    margin-bottom: 2rem;
    font-size: .9rem;
    font-weight: 100;
    letter-spacing: -1px; }
.collection .item .item-img {
  float: left;
  width: 33%;
  margin-right: 2%;
  margin-bottom: 2%;
  padding: 2%;
  border: 1px solid rgba(64, 106, 191, 0.125); }
.collection .item h2 {
  margin-top: 0; }

#home .exhibits {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#home .exhibits .image {
    width: 195px;
    float: left;
    margin-right: 20px;
    margin-bottom: 0;
}

#home .exhibits .image img {
    margin:0;
}

#homepage-text:after {
    display:block;
    content: " ";
    height: .25rem;
    width: 50px;
    background: rgba(255, 128, 0, 0.75);
    margin: 3rem auto;
}


.exhibit {
    width: 48%;
}

@media screen and (min-width: 800px) {
  .browse-list-links {
    display: -webkit-box;
    display: -moz-box;
    display: box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
    -moz-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-box-pack: justify;
    -moz-box-pack: justify;
    box-pack: justify;
    -webkit-justify-content: space-between;
    -moz-justify-content: space-between;
    -ms-justify-content: space-between;
    -o-justify-content: space-between;
    justify-content: space-between;
    -ms-flex-pack: justify;
    padding: 0 0 1rem; }
    .browse-list-links .pagination_list {
      text-align: left;
      margin: 0; }
    .browse-list-links .sort-links {
      text-align: right; }
      .browse-list-links .sort-links ul {
        text-align: right;
        margin: 0; } }
/* Footer styles */
#contentinfo {
  background-color: #331a4d;
  clear: both;
  text-align: center;
  color: #e0e0e0;
  color: rgba(255, 255, 255, 0.75);
  padding: 1rem 2rem; }
  #contentinfo p {
    font-size: .825rem; }
  #contentinfo a,
  #contentinfo a:link
  a:visited {
    color: #e0e0e0;
    color: rgba(255, 255, 255, 0.75); }
  #contentinfo a:hover,
  #contentinfo a:focus {
    color: #fff; }

#slab-link {
  content: " ";
  display: block;
  text-align: center;
  vertical-align: middle;
  max-width: 250px;
  margin: 2rem auto;
  padding: 5px 10px; }
  #slab-link svg {
    vertical-align: middle;
    max-height: 27px; }
    #slab-link svg path {
      fill: #e0e0e0;
      fill: rgba(255, 255, 255, 0.75); }
  #slab-link:hover path {
    fill: #fff; }

/* Miscellaneous classes */
.visuallyhidden, .skip,
.audible {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px; }

.eyebrow {
  font-size: .9rem;
  font-style: normal;
  font-weight: 400;
  color: #999;
  margin: 0; }
  .eyebrow + h2 {
    margin-top: 0; }

div#figures figure:not(:target) {
  display:none !important;
}

div#figures figure:first-of-type {
  display:block;
}

div#figures figure:target {
  display:block;
}

.exhibits.show #exhibit-pages {
  margin: -2rem -2rem 2rem;
  padding: 2rem;
  background: rgba(20,10,30,.025);
  margin-bottom: 2rem;
}

#exhibit-pages ul {
  margin:0;
  padding:0;
}

#exhibit-pages li:before {
  padding-left: .25em;
}

#homepage-text,
#home .exhibits,
.simple-page #primary {
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
}

#collaboratorbios .thumbnail {
    float:right;
    width: 200px;
    margin: 2em 0 2em 2em;
}

#collaboratorbios main h1 ~ div {
    margin-bottom:2em;
    overflow:hidden;
}


.simple-pages-navigation ul {
    margin:0;
    padding:0;
}

.simple-pages-navigation li {
    display:block;
    border-bottom:1px solid rgba(0,0,0,0.125);
}

.simple-pages-navigation li:before {
    content: "";
    display:none;
}

.simple-pages-navigation a {
    text-decoration:none;
    font-weight:bold;
    display:block;
    line-height:3em;
    padding: 0 1em;
}

.simple-pages-navigation a:hover,
.simple-pages-navigation a:focus,
.simple-pages-navigation a:active {
    background: rgba(0,0,0,.0375);
}

.simple-pages-navigation .active a {
    color: #333;
}

.simple-page .page-text {
    float:left;
    width: 65%;
}

.simple-page #simple-pages-navigation {
    float:right;
    width: 30%;
    margin-top:1em;
}


.simple-page #primary {
    overflow:hidden;
}

#introduction {
    background-image: 
    linear-gradient(rgba(64, 32, 96, 0.75), rgba(64, 32, 96, 0.75)),
    url("../images/bg-large.jpg");
    background-size: auto, auto, cover;
    background-position: 0 0,50% 50%;
    margin: -2rem -2rem 2rem;
    padding: 4rem;
    display:flex;
    min-height: 60vh;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
}

#introduction p {
    margin:0;
    max-width: 40vw;
    font-size: 1.25rem;
    color: white;
}

